Fixed layout issue on Search page + added GTM

--- a/web/app/themes/justicejobs/src/scss/layout/_search.scss
+++ b/web/app/themes/justicejobs/src/scss/layout/_search.scss
@@ -1,4 +1,4 @@
-.search {
+.search_contain {
     padding-top: 35px;
     max-width: 100%;
     overflow-x: hidden;
